--- a/listing/aboutdetails.html
+++ b/listing/aboutdetails.html
@@ -39,7 +39,7 @@
 
       <div class="about-details">
         <div class="about-details-offer w-100">
-          <p class="your-payout-font text-center">Tell us what your place has to offer</p>
+          <p class="your-payout-font text-center">Tell others about you </p>
           <textarea name="" id="" placeholder="Describe yourself" class="form-select"></textarea>
         </div>
         <div class="about-details-place w-100">
