--- a/listing/addlisting.html
+++ b/listing/addlisting.html
@@ -44,7 +44,7 @@
                         <img src="../img/Add.svg" width="32px" height="32px" alt="">
                       </div>
                     </div>
-               <button class="continue-button active">Continue</button>     
+               <a href="./addlisting1.html" class="continue-button active">Continue</a>     
             </div>
    </div>
 
