--- a/listing/listingtype.html
+++ b/listing/listingtype.html
@@ -28,6 +28,11 @@
           <button class="help">Save and exit</button>
         </div>
       </header>
+
+      <div class="process-status-indicator">
+        <div class="process-status-fill"></div>
+      </div>
+
       <header class="listing-header d-n">
         <a href="./addlisting.html">
           <img src="../img/arrow_back.svg" alt="">
