--- a/listing/militarydiscouunt.html
+++ b/listing/militarydiscouunt.html
@@ -42,7 +42,7 @@
           <p class="pi-font-3 mb-0">Crewdogs is a military only community where service fees are discounted. Apply your
             discount below to pass the savings to your guests.</p>
           <!-- Button trigger modal -->
-          <button type="button" class="pi-font-3 more-info-btn" data-bs-toggle="modal" data-bs-target="#exampleModal">
+          <button type="button" class="pi-font-3 more-info-btn" data-bs-toggle="modal" data-bs-target="#learnmore-1">
             learn more
           </button>
 
@@ -94,7 +94,7 @@
 
 
   <!-- Modal -->
-  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal fade" id="learnmore-1" tabindex="-1" aria-labelledby="learnmore-1" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-body">
