--- a/listing/propertydetails.html
+++ b/listing/propertydetails.html
@@ -37,7 +37,7 @@
         <img src="../img/Left 1.svg" alt="">
       </div>
 
-      <div class="Military-discount listing-property-details">
+      <div class="listing-property-details">
         <p class="your-payout-font text-center">Enter property details</p>
         <div class="w-100">
 
