--- a/listing/availability.html
+++ b/listing/availability.html
@@ -53,33 +53,42 @@
               <option selected>Days</option>
               <option value="1">Months</option>
             </select>
-           </div>
-           <br>
-         <div class="divider"></div>
-         <br>
-           <div>
+          </div>
+          <br>
+          <div class="divider"></div>
+          <br>
+          <div>
             <p class="pi-font-1">Listed on another platform?</p>
             <button class="dashboard-font-4 p-0" style="background: none; border: none;">Import/Export Calendar</button>
-           </div>
-           <br>
-           <div class="divider"></div>
-           <br>
-           <p class="your-payout-font">Optional: Select specialty stays for your place</p>
-            <br>
-           <div class="import-create-listing align-items-end">
+          </div>
+          <br>
+          <div class="divider"></div>
+          <br>
+          <p class="your-payout-font">Optional: Select specialty stays for your place</p>
+          <br>
+          <div class="import-create-listing align-items-end">
             <di>
               <p class="dashboard-font-11 mb-0">Per diem friendly</p>
-              <p class="dashboard-font-12 mb-0 m-n ">Host official government travel. You will agree to reimburse at or below federal rates and follow our <span class="dashboard-font-4"> government travel policy</span> agreement. </p>
+              <p class="dashboard-font-12 mb-0 m-n ">Host official government travel. You will agree to reimburse at or
+                below federal rates and follow our
+                <!-- government travel policy modal Button -->
+                <button type="button" class="pi-font-3 more-info-btn" data-bs-toggle="modal"
+                  data-bs-target="#government-travel-policy">
+                  government travel policy
+                </button>
+                agreement.
+              </p>
             </di>
             <div>
               <img src="../img/card.svg" alt="">
             </div>
           </div>
           <br>
-           <div class="import-create-listing align-items-end">
+          <div class="import-create-listing align-items-end">
             <di>
               <p class="dashboard-font-11 mb-0">Home swap </p>
-              <p class="dashboard-font-12 mb-0 m-n ">Agree to a short-term exchange of your home with another member of Crewdogs for no cost. </p>
+              <p class="dashboard-font-12 mb-0 m-n ">Agree to a short-term exchange of your home with another member of
+                Crewdogs for no cost. </p>
             </di>
             <div>
               <img src="../img/sync_alt.svg" alt="">
@@ -92,8 +101,46 @@
       </div>
     </div>
 
-
   </section>
+
+
+
+  <!-- government travel policy Modal -->
+  <div class="modal fade" id="government-travel-policy" tabindex="-1" aria-labelledby="government-travel-policy"
+    aria-hidden="true">
+    <div class="modal-dialog" style="width: 100%; max-width: 628px;">
+      <div class="modal-content">
+        <div class="modal-body">
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          <p class="pi-font-7 pt-4 mb-2">What we provide for official travel</p>
+          <div class="Veterans-created-Crewdogs-Crewdogs">
+            <ul class="p-0 doted-line-main pi-font-4">
+              <li class="first-after">Payouts after 30 days or check-out </li>
+              <li> Fees averaged into nightly rate</li>
+              <li> Automatic per diem calculations</li>
+              <li> GSA compliant itemized receipts</li>
+              <li class="last-before"> Exempting state taxes if needed</li>
+            </ul>
+          </div>
+
+          <p class="pi-font-7 pt-4 mb-2">What you must provide for official travel</p>
+          <div class="Veterans-created-Crewdogs-Crewdogs">
+            <ul class="p-0 doted-line-main pi-font-4">
+              <li class="first-after">Fire safety compliance</li>
+              <li>Complimentary internet</li>
+              <li>Flexible cancellation policy</li>
+              <li class="last-before">No late or early check-out fees</li>
+            </ul>
+          </div>
+
+          <p class="dashboard-font-16">
+            Don’t worry, we will follow up after the completion of your listing to ensure you are willing and able to host official travel. 
+          </p>
+
+        </div>
+      </div>
+    </div>
+  </div>
 
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
