--- a/listing/donation.html
+++ b/listing/donation.html
@@ -41,7 +41,7 @@
         <p class="your-payout-font text-center mb-0">Select your cause</p>
           <p class="pi-font-3 t-c">Crewdogs is a military only community where service fees are discounted. Apply your
               <!-- Button trigger modal -->
-          <button type="button" class="pi-font-3 more-info-btn" data-bs-toggle="modal" data-bs-target="#exampleModal">
+          <button type="button" class="pi-font-3 more-info-btn" data-bs-toggle="modal" data-bs-target="learnmore-2">
             learn more
           </button>
           </p>
@@ -105,6 +105,7 @@
           </div>
           <button class="continue-button">Publish</button>
       </div>
+      
     </div>
 
 
@@ -114,7 +115,7 @@
   
 
   <!-- Modal -->
-  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal fade" id="learnmore-2" tabindex="-1" aria-labelledby="learnmore-2" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content" >
         <div class="modal-body">
