--- a/listing/airbnbimport.html
+++ b/listing/airbnbimport.html
@@ -68,7 +68,7 @@
             <img src="../img/Edit 2.svg" width="32px" height="32px" alt="">
           </div>
         </div>
-        <button class="continue-button button-blue">continue</button>
+        <button class="continue-button active">continue</button>
       </div>
     </div>
 
