--- a/listing/airbnblisting.html
+++ b/listing/airbnblisting.html
@@ -25,7 +25,7 @@
 
             <div class="add-a-listing-main">
                     <p class="your-payout-font">Add a listing</p>
-                    <div class="import-create-listing">
+                    <div class="import-create-listing active">
                       <di>
                         <p class="dashboard-font-11 mb-0">Import an Airbnb listing</p>
                         <p class="dashboard-font-12 mb-0 m-n ">Instantly import and connect any listing you own from Airbnb</p>
@@ -35,7 +35,7 @@
                       </div>
                     </div>
                     
-                    <div class="import-create-listing active">
+                    <div class="import-create-listing">
                       <di>
                         <p class="dashboard-font-11 mb-0">Create a listing</p>
                         <p class="dashboard-font-12 mb-0 m-n">Add Rooms or an Entire Place from scratch</p>
@@ -44,7 +44,7 @@
                         <img src="../img/Add.svg" width="32px" height="32px" alt="">
                       </div>
                     </div>
-               <a href="./airbnblisting.html" class="continue-button active">Continue</a>     
+               <a href="./airbnblisting1.html" class="continue-button active">Continue</a>     
             </div>
    </div>
 
