--- a/listings.html
+++ b/listings.html
@@ -53,7 +53,7 @@
         </button>
       </div>
     </div>
-    <div class=" mt-2 filter-menu-main d-flex justify-content-between align-items-center">
+    <div class="filter-menu-mobile filter-menu-main d-flex justify-content-between align-items-center">
       <div id="filter-menu-main" class="over-x-scroll">
         <div class="filter-area p-1 d-flex align-items-center">
           <div id="filter-menu-1" class="filter-menu d-flex p-1" style="padding-left: 0;">
