--- a/listing/addlisting1.html
+++ b/listing/addlisting1.html
@@ -126,7 +126,7 @@
           </div>
         </div>
 
-
+        <br>
         <div class="w-100">
           <p class="your-payout-font text-center">Enter room details</p>
           <div class="sqft-input-main">
@@ -464,7 +464,7 @@
       
       <p class="your-payout-font text-center">Share pictures of your place</p>
       <div class="drag-picture w-100">
-        <div class="added-pictures added-pictures-button-1 ">
+        <div class="added-pictures added-pictures-button-1 m-auto">
           <br>
           <img src="../img/Image.svg" style="width: 38px; height: 38px" alt=""/>
           <div>
