--- a/listing/listingtype1.html
+++ b/listing/listingtype1.html
@@ -93,7 +93,7 @@
       
       continueButton.addEventListener('click', function () {
         if (selectedDiv) {
-          window.location.href = './listingtype2.html';
+          window.location.href = './listingtype.html';
         } else {
           alert('Please select an option before continuing.');
         }
