--- a/listing/airbnblisting1.html
+++ b/listing/airbnblisting1.html
@@ -44,7 +44,7 @@
                         <img src="../img/Add.svg" width="32px" height="32px" alt="">
                       </div>
                     </div>
-               <a href="./addlisting1.html" class="continue-button active">Continue</a>     
+               <a href="./addlisting.html" class="continue-button active">Continue</a>     
             </div>
    </div>
 
