--- a/listing/cohost1.html
+++ b/listing/cohost1.html
@@ -58,7 +58,7 @@
             <input type="text" placeholder="e.g. name@gmail.com" class="form-select" style="background: none; height: 48px;">
           </div>
          </div>
-     <button class="continue-button ">Continue</button>
+     <button class="continue-button active">Continue</button>
      <br>     
   </div>
   </div>
