--- a/details.html
+++ b/details.html
@@ -45,6 +45,7 @@
       </a>
 
 
+
       <div class="hero-search search-small m-n">
         <div id="searchbarmain"></div>
       </div>
@@ -95,11 +96,11 @@
   </div>
 
 
-  <div class="container margin-top-none" style=" margin-top: 5rem; max-width: 1500px;">
+  <div class="container margin-top-none" style=" max-width: 1500px;">
 
     <div class="container">
 
-      <div class="mobile-version-details-heading  p-a margin-top-none mt-5 "
+      <div class="mobile-version-details-heading  p-a margin-top-none"
         style="z-index: 100;">
         <h1 class="h3 mb-0 mobile-none details-header-font-1 ">[Listing Title]</h1>
         <a href="" class="details-mobile-icons desktop-version-none">
