--- a/listings-map.html
+++ b/listings-map.html
@@ -24,6 +24,7 @@
 </head>
 
 <body>
+ <div style="position: sticky; top: 0; z-index: 100; background-color: #fff;">
 
   <div id="search-bar" class="search-main d-n" style="top:45px;">
     <div class="d-flex align-items-center justify-content-evenly gap-2 mt-2" style="padding: 0 10px;">
@@ -39,8 +40,6 @@
           </p>
         </div>
       </div>
-
-
       <div class="filter-button filter-button-m " style="position: relative;">
         <div class="bouble-notification">3</div>
         <button type="button" class="btn d-flex   gap-1 btn-cd-secondary btn-pill" data-bs-toggle="modal"
@@ -53,47 +52,13 @@
         </button>
       </div>
     </div>
-    <div class="filter-menu-mobile filter-menu-main d-flex justify-content-between align-items-center">
-      <div id="filter-menu-main">
-        <div class="filter-area p-1 d-flex align-items-center">
-          <div id="filter-menu-1" class="filter-menu d-flex p-1" style="padding-left: 0;">
-            <button type="button" class="btn btn-cd-light btn-pill active">
-              <img src="img/bed-1.svg" alt=""> Room
-            </button>
-            <button type="button" class="btn btn-cd-light btn-pill ">
-              <img src="img/bag.svg" alt=""> Short Term
-            </button>
-            <button type="button" class="btn btn-cd-light btn-pill">
-              <img src="img/file-1.svg" alt=""> Per diem
-            </button>
-            <button type="button" class="btn btn-cd-light btn-pill">
-              <img src="img/network-1.svg" alt=""> Home swap
-            </button>
-            <button type="button" class="btn btn-cd-light btn-pill">
-              <img src="img/Home.svg" alt=""> Entire place
-            </button>
-            <button type="button" class="btn btn-cd-light btn-pill">
-              <img src="img/mike.png" alt=""> Free
-            </button>
-            <button type="button" class="btn btn-cd-light btn-pill">
-              <img src="img/dog-1.png" alt=""> pet Friendly
-            </button>
-            <button type="button" class="btn btn-cd-light btn-pill">
-              <img src="img/truck-long-term.svg" alt=""> Long Term
-            </button>
-          </div>
-        </div>
-      </div>
-    </div>
   </div>
-
 
   <div class="header-parent">
     <header class="container">
       <a href="/" class="text-decoration-none home-crew-logo">
         <img src="img/logo.svg" alt="">
       </a>
-
 
       <div class="hero-search search-small m-n">
         <div id="searchbarmain"></div>
@@ -143,68 +108,85 @@
       </div>
     </header>
   </div>
+   <!-- filter -->  
+   <div class="filter-menu-main filter-area">
+    <div class="filter-button m-n">
+      <div class="bouble-notification">3</div>
+      <button type="button" class="btn btn-cd-secondary btn-pill" data-bs-toggle="modal"
+        data-bs-target="#exampleModalScrollable">
+        Filter
+        <img src="./img/Filter 5.svg" alt="">
+      </button>
+    </div>
 
+    <button class="scroll-back">
+      <img src="./img/Right 1.svg" alt="">
+    </button>
 
-  <div class="map-main" style="padding-top: 80px;">
+    <div id="filter-menu-scroll" class="filter-menu" style="padding-left: 0px; margin-left: -1.5rem;">
+      <button type="button" class="btn btn-cd-light btn-pill active">
+        <img src="img/bed-1.svg" alt=""> Room
+      </button>
+      <button type="button" class="btn btn-cd-light btn-pill ">
+        <img src="img/bag.svg" alt=""> Short Term
+      </button>
+      <button type="button" class="btn btn-cd-light btn-pill">
+        <img src="img/file-1.svg" alt=""> Per diem
+      </button>
+      <button type="button" class="btn btn-cd-light btn-pill">
+        <img src="img/network-1.svg" alt=""> Home swap
+      </button>
+      <button type="button" class="btn btn-cd-light btn-pill">
+        <img src="img/Home.svg" alt=""> Entire place
+      </button>
+      <button type="button" class="btn btn-cd-light btn-pill">
+        <img src="img/mike.png" alt=""> Free
+      </button>
+      <button type="button" class="btn btn-cd-light btn-pill">
+        <img src="img/dog-1.png" alt=""> pet Friendly
+      </button>
+      <button type="button" class="btn btn-cd-light btn-pill">
+        <img src="img/truck-long-term.svg" alt=""> Long Term
+      </button>
+
+      <button type="button" class="btn btn-cd-light btn-pill ">
+        <img src="img/bag.svg" alt=""> Short Term
+      </button>
+      <button type="button" class="btn btn-cd-light btn-pill">
+        <img src="img/file-1.svg" alt=""> Per diem
+      </button>
+      <button type="button" class="btn btn-cd-light btn-pill">
+        <img src="img/network-1.svg" alt=""> Home swap
+      </button>
+      <button type="button" class="btn btn-cd-light btn-pill">
+        <img src="img/Home.svg" alt=""> Entire place
+      </button>
+      <button type="button" class="btn btn-cd-light btn-pill">
+        <img src="img/mike.png" alt=""> Free
+      </button>
+      <button type="button" class="btn btn-cd-light btn-pill">
+        <img src="img/dog-1.png" alt=""> pet Friendly
+      </button>
+      <button type="button" class="btn btn-cd-light btn-pill">
+        <img src="img/truck-long-term.svg" alt=""> Long Term
+      </button>
+
+    </div>
+
+    <button class="scroll-next">
+      <img src="./img/Right 1.svg" alt="">
+    </button>
+
+  </div>
+</div>
+
+  <div class="map-main">
     <div id="Left-Map " class="left-Map ">
       <div class="mobile-map-result-div" style="display: block;">
         <div class="line-l-m"></div>
         <h6 class="result-places-text"> <span>7</span> Places </h6>
       </div>
-      <!-- filter -->
-       
-      <div class="filter-menu-main filter-area m-n" style="margin-top: -1rem;">
-        <div class="filter-button">
-          <div class="bouble-notification">3</div>
-          <button type="button" class="btn btn-cd-secondary btn-pill" data-bs-toggle="modal"
-            data-bs-target="#exampleModalScrollable">
-            Filter
-            <img src="./img/Filter 5.svg" alt="">
-          </button>
-        </div>
-
-        <button class="scroll-back">
-          <img src="./img/Right 1.svg" alt="">
-        </button>
-
-        <div id="filter-menu-scroll" class="filter-menu" style="padding-left: 0px; margin-left: -1.5rem;">
-          <button type="button" class="btn btn-cd-light btn-pill active">
-            <img src="img/bed-1.svg" alt=""> Room
-          </button>
-          <button type="button" class="btn btn-cd-light btn-pill ">
-            <img src="img/bag.svg" alt=""> Short Term
-          </button>
-          <button type="button" class="btn btn-cd-light btn-pill">
-            <img src="img/file-1.svg" alt=""> Per diem
-          </button>
-          <button type="button" class="btn btn-cd-light btn-pill">
-            <img src="img/network-1.svg" alt=""> Home swap
-          </button>
-          <button type="button" class="btn btn-cd-light btn-pill">
-            <img src="img/Home.svg" alt=""> Entire place
-          </button>
-          <button type="button" class="btn btn-cd-light btn-pill">
-            <img src="img/mike.png" alt=""> Free
-          </button>
-          <button type="button" class="btn btn-cd-light btn-pill">
-            <img src="img/dog-1.png" alt=""> pet Friendly
-          </button>
-          <button type="button" class="btn btn-cd-light btn-pill">
-            <img src="img/truck-long-term.svg" alt=""> Long Term
-          </button>
-
-        </div>
-
-        <button class="scroll-next">
-          <img src="./img/Right 1.svg" alt="">
-        </button>
-
-      </div>
-
-
-
-
-
+      
       <div class="m-auto">
         <div class="listing-map">
           <div class="listing-item">
@@ -853,7 +835,7 @@ window.onscroll = function() {
       // Check if swipe is more than 10px and scrollTop is 0
       if (deltaY > 10 && window.scrollY === 0 && !isTransformed) {
         // Transform to 70vh
-        leftMap.style.transform = 'translateY(71vh)';
+        leftMap.style.transform = 'translateY(58vh)';
         leftMap.classList.add('mobile-map-result-div');
         footerListingMap.style.display = 'none';
         isTransformed = true;
@@ -872,7 +854,7 @@ window.onscroll = function() {
       if (window.scrollY > seventyVh) {
         if (window.innerWidth < 700) {
           // Set the transform if scrolled more than 70vh
-          leftMap.style.transform = 'translateY(-30px)';
+          leftMap.style.transform = 'translateY(-115px)';
         }
       }
     });
